feat: cache and message midddlewares
